--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-uk">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>Mohit's Blog &raquo; {{ page.title }}</title>
-  <meta name="author" content="Mohit Yadav" />
+  <title>Christian's Blog &raquo; {{ page.title }}</title>
+  <meta name="author" content="Christian Leonard Quale" />
 </head>
 <body>
   <div id="header">
     <h1>Christian's Blog</h1>
-  </div>
-  <div id="nav">
   </div>
   <div id="content">
   {{ content }}
