Tried to fix css

--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,11 @@
 header {
-	font-family:'matura mt script capitals';
+	font-family:comic sans ms;
 	font-size:22pt;
     color:#98AFC7;
 }
 
 content {
-	font-family:'arial';
+	font-family:arial;
 	font-size:11pt;
     color:#98AFC7;
 }
