--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div id="header">
-    <h1>Christian's Blog</h1>
+    Christian's Blog
   </div>
   <div id="content">
   {{ content }}
