This should fix it.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,10 +9,10 @@
   <link href="/css/main.css" rel="stylesheet" type="text/css" >
 </head>
 <body>
-  <div id="header">
+  <div class="header" >
     Christian's Blog
   </div>
-  <div id="content">
+  <div class="content">
   {{ content }}
   </div>
 </body>
