Changed css a little

--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,11 @@
 .header {
-	font-family:comic sans ms;
+	font-family:serif;
 	font-size:22pt;
     color:#98AFC7;
 }
 
 .content {
-	font-family:arial;
+	font-family:sans-serif;
 	font-size:11pt;
     color:#98AFC7;
 }
