--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,8 @@
 .content {
 	font-family:sans-serif;
 	font-size:11pt;
-    color:#98AFC7;
+    color:#000000;
+    background-color:#99FFCC;
 }
 
 body {
