Trying something different

--- a/css/main.css
+++ b/css/main.css
@@ -19,5 +19,5 @@
 }
 
 body {
-	background-image:url('../css/rock.jpg');
+	background-image:url('http://static2.grsites.com/archive/textures/lgrey/lgrey070.jpg');
 }
