Changed a few things.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,9 @@
   <div class="header" >
     Christian's Blog
   </div>
+    <div class="navigation" >
+    <a href="#">Home</a> <a href="#">Contact</a> <a href="#">Other Stuff</a>
+  </div>
   <div class="content">
   {{ content }}
   </div>
