--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,12 @@
     color:#000033;
 }
 
+.navigation {
+	font-family:serif;
+	font-size:22pt;
+    color:#000033;
+}
+
 .content {
 	font-family:sans-serif;
 	font-size:11pt;
