--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,16 @@
   <div class="header" >
     Christian's Blog
   </div>
-    <div class="navigation" >
-    <a href="#">Home</a> <a href="#">Contact</a> <a href="#">Other Stuff</a>
-  </div>
+<div id="navbar">
+<span class="inbar">
+<ul>
+<li class="navhome"><a href="#"><span>Home</span></a></li>
+<li><a href="#"><span>About</span></a></li>
+<li><a href="#"><span>Other Stuff</span></a></li>
+<li><a href="#"><span>Contact</span></a></li>
+</ul>
+</span>
+</div>
   <div class="content">
   {{ content }}
   </div>
