--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="header" >
-    Christian's Blog
+    Christian's place on the internet.
   </div>
 <div id="navbar">
 <span class="inbar">
