--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 <span class="inbar">
 <ul>
 <li class="navhome"><a href="#"><span>Home</span></a></li>
-<li><a href="#"><span>About</span></a></li>
+<li><a href="#"><span>About Me</span></a></li>
 <li><a href="#"><span>Other Stuff</span></a></li>
 <li><a href="#"><span>Contact</span></a></li>
 </ul>
