--- a/css/main.css
+++ b/css/main.css
@@ -79,3 +79,9 @@ body {
     padding:0;
     color:#000000;
 }
+
+A:link {text-decoration: none}
+A:visited {text-decoration: none}
+A:active {text-decoration: none}
+A:hover {text-decoration: underline; color: red;}
+
