--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 <div id="navbar">
 <span class="inbar">
 <ul>
-<li class="navhome"><a href="#"><span>Home</span></a></li>
+<li class="navhome"><a href="../index.html"><span>Home</span></a></li>
 <li><a href="../about.html"><span>About Me</span></a></li>
 <li><a href="#"><span>Other Stuff</span></a></li>
 <li><a href="#"><span>Contact</span></a></li>
