--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="header" >
-    <img src="../img/logo.png" alt="Christian's piece of the internet"/>
+    <img src="/img/logo.png" alt="Christian's piece of the internet"/>
   </div>
 <div id="navbar">
 <span class="inbar">
