--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,8 @@ line-height:36px; }
 	font-family:sans-serif;
 	font-size:13pt;
     width:600px;
-    background-color:#F9F4E4;
+    background-color:#EFFBF8;
+    margin:15;
 
 }
 
