--- a/css/main.css
+++ b/css/main.css
@@ -69,9 +69,10 @@ line-height:36px; }
 #post-container {
 	font-family:sans-serif;
 	font-size:13pt;
-    width:600px;
+    width:650px;
     background-color:#EFFBF8;
     margin:15;
+    padding:15;
 
 }
 
