Hopefully improving readability

--- a/css/main.css
+++ b/css/main.css
@@ -71,8 +71,7 @@ line-height:36px; }
 	font-size:13pt;
     width:650px;
     background-color:#EFFBF8;
-    margin:15;
-    padding:15;
+    padding:15px;
 
 }
 
