Trying a grey background for posts.

--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,7 @@ line-height:36px; }
 	font-family:sans-serif;
 	font-size:13pt;
     width:650px;
-    background-color:#EFFBF8;
+    background-color:#E8E8E8;
     padding:15px;
 
 }
