--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 #navbar{
-width:690px;
+width:auto;
 height:36px;
 background:url(../img/navbar-bg.png) left top repeat-x; }
 #navbar .inbar{
@@ -69,7 +69,7 @@ line-height:36px; }
 #post-container {
 	font-family:sans-serif;
 	font-size:13pt;
-    width:690px;
+    width:689px;
     background-color:#E8E8E8;
     padding:30px;
 
