--- a/css/main.css
+++ b/css/main.css
@@ -78,9 +78,10 @@ line-height:36px; }
 #image {
 	font-family:arial;
 	font-size:11pt;
-    width:auto;
+    max-width:100%;
     border-style:solid;
     border-width:5px;
+    white-space:normal; 
 
 }
 
