--- a/css/main.css
+++ b/css/main.css
@@ -78,7 +78,8 @@ line-height:36px; }
 #image {
 	font-family:arial;
 	font-size:11pt;
-    max-width:100%;
+    max-width:9px;
+    overflow:auto
     border-style:solid;
     border-width:5px;
     white-space:normal; 
