--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,7 @@ line-height:36px; }
 	font-family:arial;
 	font-size:11pt;
     max-width:9px;
-    overflow:auto
+    overflow:auto;
     border-style:solid;
     border-width:5px;
     white-space:normal; 
