--- a/css/main.css
+++ b/css/main.css
@@ -72,14 +72,13 @@ line-height:36px; }
     width:689px;
     background-color:#E8E8E8;
     padding:30px;
-    overflow:auto;
 
 }
 
 #image {
 	font-family:arial;
 	font-size:11pt;
-    max-width:9px;
+    max-width:100%;
     border-style:solid;
     border-width:5px;
     white-space:normal; 
