--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,13 @@ background:url(../img/spanhover-bg.png) right top no-repeat;
 height:36px;
 line-height:36px; }
 
+#page-navigation {
+	font-family:sans-serif;
+	font-size:13pt;
+    width:700px;
+
+}
+
 .header {
 	font-family:serif;
 	font-size:30pt;
