This might make it look nicer.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
                 <a href="{{page.previous.url}}" title="Previous Post: 
 {{page.previous.title}}">&laquo; {{page.previous.title}}</a> 
         {% endif %} 
-        </div> 
+        </div> <br>
         <div class="right"> 
         {% if page.next.url %} 
                 <a href="{{page.next.url}}" title="next Post: 
