--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,8 @@ layout: default
 </h2>
   <div id="date">Posted on {{ page.date | date_to_string }}</div>
   {{ content }}
-
+<br> <br>
+Any feedback or comments? [Contact me!](/contact.html)
 <div id="page-navigation"> 
         <div class="clear">&nbsp;</div> 
         <div class="left"> 
