--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
   <div id="date">Posted on {{ page.date | date_to_string }}</div>
   {{ content }}
 <br> <br>
-Any feedback or comments? [Contact me!](/contact.html)
+Any feedback or comments? <a href="/contact.html">Contact me!</a>
 <div id="page-navigation"> 
         <div class="clear">&nbsp;</div> 
         <div class="left"> 
