Forgot to add a file.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
 <span class="inbar">
 <ul>
 <li class="navhome"><a href="/index.html"><span>Home</span></a></li>
+<li><a href="/blog/"><span>Blog</span></a></li>
 <li><a href="/about.html"><span>About Me</span></a></li>
 <li><a href="#"><span>Other Stuff</span></a></li>
 <li><a href="/contact.html"><span>Contact</span></a></li>
