--- a/css/main.css
+++ b/css/main.css
@@ -114,3 +114,32 @@ vertical-align:middle; margin-bottom: 3px; }
 .right { margin: 0.5em 0pt 0.5em 0.8em; float:right; } 
 .left { margin: 0.5em 0.8em 0.5em 0; float:left; } 
 
+.content{
+  margin-left: 110px;
+  width: 650px;
+  margin-bottom: 50px;
+}
+.related{
+  margin-top: 10px;
+}
+.related ul{
+  margin: 0;
+  padding: 0;
+}
+.related li{
+  font-size: 14px;
+  list-style: none;
+  padding: 5px 0px;
+  margin: 0;
+  color: #777;
+  border-bottom: 1px solid #eee;
+}
+.related li span{
+  float: right;
+}
+.related a{
+  text-decoration: none;
+}
+.related a:hover{
+  text-decoration: underline;
+}
