--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 <li class="navhome"><a href="/index.html"><span>Home</span></a></li>
 <li><a href="/blog/"><span>Blog</span></a></li>
 <li><a href="/about.html"><span>About Me</span></a></li>
-<li><a href="#"><span>Other Stuff</span></a></li>
+<li><a href="/elsewhere.html"><span>Elsewhere</span></a></li>
 <li><a href="/contact.html"><span>Contact</span></a></li>
 </ul>
 </span>
