--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 <div id="navbar">
 <span class="inbar">
 <ul>
-<li class="navhome"><a href="/index.html"><span>Home</span></a></li>
+<li><a href="/index.html"><span>Home</span></a></li>
 <li><a href="/blog/"><span>Blog</span></a></li>
 <li><a href="/about.html"><span>About Me</span></a></li>
 <li><a href="/elsewhere.html"><span>Elsewhere</span></a></li>
