--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 #navbar{
 width:auto;
 height:36px;
-background:url(../img/navbar-bg.png) left top repeat-x; }
+background:url(../img/navbar-bgbla.png) left top repeat-x; }
 #navbar .inbar{
 display:block;
 height:36px;
