--- a/css/main.css
+++ b/css/main.css
@@ -143,3 +143,62 @@ vertical-align:middle; margin-bottom: 3px; }
 .related a:hover{
   text-decoration: underline;
 }
+
+#menu8 {
+
+	width: 200px;
+
+	margin: 10px;
+
+	border-style: solid;
+
+	border-color: #656556;
+
+	border-size: 1px;
+
+	border-width: 1px;
+
+	}
+
+	
+
+#menu8 li a {
+
+	height: 32px;
+
+  	voice-family: "\"}\""; 
+
+  	voice-family: inherit;
+
+  	height: 24px;
+
+	text-decoration: none;
+
+	}	
+
+	
+
+#menu8 li a:link, #menu8 li a:visited {
+
+	color: #656556;
+
+	display: block;
+
+	background:  url(/img/menu8.gif);
+
+	padding: 8px 0 0 20px;
+
+	}
+
+	
+
+#menu8 li a:hover {
+
+	color: #474739;
+
+	background:  url(/img/menu8.gif) 0 -32px;
+
+	padding: 8px 0 0 20px;
+
+	}
+
