--- a/css/main.css
+++ b/css/main.css
@@ -146,7 +146,7 @@ vertical-align:middle; margin-bottom: 3px; }
 
 .menu{
     width: 100%;
-    background-color: #333; }
+ }
     
     .menu ul{
     margin: 0; padding: 0;
