Trying a new menu

--- a/css/main.css
+++ b/css/main.css
@@ -165,6 +165,6 @@ vertical-align:middle; margin-bottom: 3px; }
     color: black;}
  
 .menu ul li a:hover, .menu ul li .current{
-    color: #fff;
-    background-color:#0b75b2;}
+    color: black;
+    background-color:#82CAFF;}
 
