Trying a new menu

--- a/css/main.css
+++ b/css/main.css
@@ -166,5 +166,5 @@ vertical-align:middle; margin-bottom: 3px; }
  
 .menu ul li a:hover, .menu ul li .current{
     color: black;
-    background-color:#82CAFF;}
+    background-color:#E0FFFF;}
 
