--- a/css/main.css
+++ b/css/main.css
@@ -160,7 +160,7 @@ blockquote
 cite
     {
     font-size: 0.6em;
-    float: right;
-    padding-bottom:45px;    
+    float: left;
+    padding-bottom:55px;    
 }
 
