--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-uk">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>Christian's Blog &raquo; {{ page.title }}</title>
+  <title>Christian's Website &raquo; {{ page.title }}</title>
   <meta name="author" content="Christian Leonard Quale" />
   <link href="/css/main.css" rel="stylesheet" type="text/css" >
 </head>
