And now it even links to the correct place.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="header" >
-    <a href="http://twitter.com/clq"><img src="/img/logo.png" alt="Christian's piece of the internet"/></a>
+    <a href="/index.html"><img src="/img/logo.png" alt="Christian's piece of the internet"/></a>
   </div>
 <div id="navbar">
 <span class="inbar">
