Trying this out...

--- a/css/live.css
+++ b/css/live.css
@@ -94,7 +94,7 @@ line-height:36px; }
 }
 
 body {
-	background-image:url('../css/background.gif');
+	background-image:url('http://i.dailymail.co.uk/i/pix/2012/08/23/article-0-14AA6E9E000005DC-369_634x352.jpg');
     width:745px;
     margin:0 auto;
     padding:0;
