Trying this out...

--- a/css/live.css
+++ b/css/live.css
@@ -101,6 +101,10 @@ body {
     color:#000000;
 }
 
+h1 {
+    color:'red';
+}
+
 A:link {text-decoration: none}
 A:visited {text-decoration: none}
 A:active {text-decoration: none}
