--- a/css/live.css
+++ b/css/live.css
@@ -66,7 +66,7 @@ line-height:36px; }
     color:#000033;
 }
 
-.content {
+.posts{
 	font-family:sans-serif;
 	font-size:13pt;
     width:700px;
@@ -74,7 +74,7 @@ line-height:36px; }
 
 }
 
-#post-container {
+#post-writer {
 	font-family:sans-serif;
 	font-size:13pt;
     width:685px;
@@ -126,7 +126,7 @@ vertical-align:middle; margin-bottom: 3px; }
 .right { margin: 0.5em 0pt 0.5em 0.8em; float:right; } 
 .left { margin: 0.5em 0.8em 0.5em 0; float:left; } 
 
-.content{
+.posts{
   margin-left: 5px;
   width: 650px;
   margin-bottom: 50px;
